<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/start_driving"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cisc499.drivesafe.StartDriving">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/overall_risk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="#888888"
            android:gravity="center"
            android:text="@string/overall_risk"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/driver_section_head"
            android:textColor="#000000"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/overspeed_indicator"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/overspeed_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/overspeed"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/overspeed" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hard_braking_indicator"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/hard_braking_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hard_braking"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/hard_braking" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/aggressive_steering_indicator"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/aggressive_steering_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/aggressive_steering"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/aggressive_steering" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sudden_acceleration_indicator"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/sudden_acceleration_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sudden_acceleration"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/sudden_acceleration" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/road_condition_section_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/road_condition_section_head"
            android:textColor="#000000"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/potholes_indicator"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/potholes_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/potholes"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/potholes" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slipperiness_indicator"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/slipperiness_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/slipperiness"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/slipperiness" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/surrounding_drivers_section_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/surrounding_drivers_section_head"
            android:textColor="#000000"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/aggressive_percent_indicator"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/aggressive_percent_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/aggressive_percent"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/aggressive_percent" />
    </TableRow>

    <!--<TableRow-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="center"-->
    <!--android:orientation="horizontal" >-->

    <!--<Button android:id = "@+id/profile"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text= "@string/stop_driving_button"-->
    <!--android:onClick = "viewUserProfile"/>-->

    <!--<Button android:id = "@+id/refresh"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text= "@string/refresh_button"-->
    <!--android:onClick = "refresh"/>-->

    <!--</TableRow>-->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/auto_refresh"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:onClick="autoRefresh"
            android:text="@string/auto_refresh_button" />

        <Button
            android:id="@+id/stop_auto_refresh"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:onClick="stopAutoRefresh"
            android:text="@string/stop_auto_refresh_button" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/report_pothole"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:onClick="reportPothole"
            android:text="@string/report_pothole_button" />

        <Button
            android:id="@+id/report_slipper"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:onClick="reportSlipper"
            android:text="@string/report_slipper_button" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFF00"
        android:gravity="center"
        android:orientation="horizontal">

        <!--<TextView android:id="@+id/connection_status_indicator"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/connection_status_indicator"-->
        <!--android:textColor="@color/red"-->
        <!--android:textStyle="bold" />-->

        <TextView
            android:id="@+id/connection_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/connection_status"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:scrollHorizontally="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:singleLine="true"/>

    </TableRow>

</TableLayout>
