<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/user_profile"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cisc499.drivesafe.UserProfile"
    tools:showIn="@layout/activity_user_profile">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView android:id = "@+id/user_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src = "@mipmap/user"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView android:id = "@+id/user_name_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText android:id = "@+id/user_name"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_name" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView android:id = "@+id/user_trips_made_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_trips_made_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText android:id = "@+id/user_trips_made"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_trips_made" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

    <TextView android:id = "@+id/user_acceleration_score_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_acceleration_score_indicator"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText android:id = "@+id/user_acceleration_score"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_acceleration_score" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView android:id = "@+id/user_steering_score_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_steering_score_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText android:id = "@+id/user_steering_score"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_steering_score" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView android:id = "@+id/user_brake_score_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_brake_score_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText android:id = "@+id/user_brake_score"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_brake_score" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView android:id = "@+id/user_speed_score_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_speed_score_indicator"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText android:id = "@+id/user_speed_score"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_speed_score" />

    </TableRow>

    <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal" >-->

        <!--<Button android:id = "@+id/drive"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text= "@string/drive_button"-->
            <!--android:onClick = "startDriving"/>-->

        <!--<Button android:id = "@+id/go_home"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text= "@string/home_button"-->
            <!--android:onClick = "goHome"/>-->

    <!--</TableRow>-->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView android:id = "@+id/score_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text= "@string/score_button" />

        <EditText android:id = "@+id/user_overall_score"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text= "@string/score_field" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "Refresh"
            android:onClick = "refresh"/>

    </TableRow>



</TableLayout>
