<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.cisc499.drivesafe.MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView android:id = "@+id/main_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src = "@mipmap/car_icon" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

    <Button android:id = "@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/profile_button"
            android:onClick="viewUserProfile" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button android:id = "@+id/drive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/drive_button"
            android:onClick="startDriving"/>
    </TableRow>

    <!--DEBUG-->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "Intersection"
            android:onClick="intersection"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView android:id = "@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copyright" />

    </TableRow>

</TableLayout>
